# smas-rl-gnn

./: .gitignore  README.md  ablation_conf.yaml  ablation_conf_mahti.yaml  aggregate_ablation_results.py  calc_eval_metrics_from_runs.py  eval_baselines.py  eval_checkpoint_seed100.py  eval_saved_models.py  eval_saved_models_soft_reset.py  holdout_eval_model.py  plot_action_candidates.py  plot_comp_norms.py  plot_conflicts_comparison.py  plot_eval_metrics_comparison.py  plot_eval_results.py  plot_quality_episode_metrics.py  plot_training_results.py  test_rewards_nondet.py  train.py  train_and_eval_seed100.py  train_output.txt
configs/: 5-15-fast.rou.xml  5-15.rou.xml  coordination_medium_6t_40p.rou.xml  coordination_medium_rand_dest.xml  parkingareas.add.xml  randgrid.net.xml  rp_gnn.yaml  rp_gnn_1hop-1.yaml  rp_gnn_1hop-1_ctc.yaml  rp_gnn_1hop-1_rnd.yaml  rp_gnn_1hop-2.yaml  rp_gnn_1hop-2_ctc.yaml  rp_gnn_1hop-2_rnd.yaml  rp_gnn_1hop-3.yaml  rp_gnn_1hop-3_ctc.yaml  rp_gnn_1hop-3_rnd.yaml  rp_gnn_1hop-4.yaml  rp_gnn_1hop-4_ctc.yaml  rp_gnn_1hop-4_rnd.yaml  rp_gnn_1hop-5.yaml  rp_gnn_1hop-5_ctc.yaml  rp_gnn_1hop-5_rnd.yaml  rp_gnn_1hop_1hop_critic-1.yaml  rp_gnn_1hop_1hop_critic-1_ctc.yaml  rp_gnn_1hop_1hop_critic-1_rnd.yaml  rp_gnn_1hop_1hop_critic-2.yaml  rp_gnn_1hop_1hop_critic-2_ctc.yaml  rp_gnn_1hop_1hop_critic-2_rnd.yaml  rp_gnn_2hop-1.yaml  (+32 more)
rt_gnn_rl/: __init__.py  pyproject.toml
rt_gnn_rl/graphs/: __init__.py  builders.py
rt_gnn_rl/policy/: __init__.py  action_context.py  actor_critic.py  gnn_backbone.py  sb3_gnn_policy.py
rt_gnn_rl/rollouts/: rewards.py
(+33 files in other folders)
