[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rt-gnn-rl"
version = "0.0.1"
description = "Shared GNN+RL utilities for ride-pooling and robot-task allocation"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.0",
  "torch-geometric>=2.4",
  "stable-baselines3>=2.3.0",
  "gymnasium>=0.29",  # or gym if that’s what you use
  "numpy",
]
